--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,6 +30,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Flake8 Annotator
+      uses: rbialon/flake8-annotations@v1
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
