--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,6 +1,6 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-# Changes from default: security_hardening branch, python 3.9
+# Changes from default: security_hardening branch, python 3.9, flake8 annotations
 
 name: Python application
 
