--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -9,10 +9,12 @@ on:
     branches: 
       - master
       - security_hardening
+      - tests
   pull_request:
     branches:
       - master
       - security_hardening
+      - tests
 
 jobs:
   build:
