--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,7 +24,7 @@ jobs:
         os: [ubuntu-latest, windows-latest]
     steps:
     - name: Check out repository
-    - uses: actions/checkout@v2
+      uses: actions/checkout@v2
     - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
