--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -18,10 +18,7 @@ on:
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]
+    runs-on: ubuntu-latest
     steps:
     - name: Check out repository
       uses: actions/checkout@v2
@@ -46,11 +43,11 @@ jobs:
       run: |
         python -m pytest
     - name: Generate coverage report
-      run: pytest --cov=./ --cov-report=xml
+      run: python -m pytest --cov=./ --cov-report=xml
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
       with: 
         file: ./coverage.xml 
         flags: unittests
-        env_vars: OS,PYTHON
+        env_vars: OS, PYTHON
         verbose: true
