--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,6 +1,5 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
+# This workflow will install Python dependencies, run tests, lint, and upload a report to codecov on selected branches
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-# Changes from default: python 3.9, security_hardening and tests branches, flake8 annotations, codecov
 
 name: Python application
 
@@ -39,15 +38,12 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
+    - name: Test and generate coverage report with pytest
       run: |
-        python -m pytest
-    - name: Generate coverage report
-      run: python -m pytest --cov=./ --cov-report=xml
+        python -m pytest --cov=./ --cov-report=xml
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
       with: 
         file: ./coverage.xml 
         flags: unittests
         env_vars: OS, PYTHON
-        verbose: true
