--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,7 +5,7 @@ name: build
 
 on:
   push:
-    branches: 
+    branches:
       - master
       - security_hardening
       - tests
@@ -36,14 +36,14 @@ jobs:
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        # exit-zero treats all errors as warnings. CTFOJ uses 90 characters per line as the limit for Python code.
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=90 --statistics
     - name: Test and generate coverage report with pytest
       run: |
-        python -m pytest --cov=./ --cov-report=xml
+        python -m pytest -v --cov=./ --cov-report=xml
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
-      with: 
-        file: ./coverage.xml 
+      with:
+        file: ./coverage.xml
         flags: unittests
         env_vars: OS, PYTHON
