--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -17,7 +17,9 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: 
+      - ubuntu-20.04
+      - windows-2019
     steps:
     - name: Check out repository
       uses: actions/checkout@v2
@@ -29,7 +31,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest pytest-cov
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install -r requirements.txt
     - name: Flake8 Annotator
       uses: rbialon/flake8-annotations@v1
     - name: Lint with flake8
