--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -3,6 +3,7 @@
 
 name: build
 
+
 on:
   push:
     branches:
@@ -17,9 +18,10 @@ on:
 
 jobs:
   build:
-    runs-on: 
-      - ubuntu-20.04
-      - windows-2019
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-20.04, windows-2019]
     steps:
     - name: Check out repository
       uses: actions/checkout@v2
