--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -8,27 +8,21 @@
 # We have attempted to detect the languages in your repository. Please check
 # the `language` matrix defined below to confirm you have the correct set of
 # supported CodeQL languages.
-# Changes from default: add security_hardening and tests branches
+# Changes from default: version and branches
 name: "CodeQL"
 
 on:
   push:
-    branches: 
-      - master
-      - security_hardening
-      - tests
+    branches: '*'
   pull_request:
-    branches:
-      - master
-      - security_hardening
-      - tests
+    branches: '*'
   schedule:
     - cron: '34 6 * * 2'
 
 jobs:
   analyze:
     name: Analyze
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     strategy:
       fail-fast: false
