--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-20.04, windows-2019]
+        os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
     - name: Check out repository
       uses: actions/checkout@v2
@@ -38,7 +38,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=90 --statistics
     - name: Test and generate coverage report with pytest
       run: |
-        python -m pytest -v --cov=./ --cov-report=xml
+        python -m pytest -v --cov=./ --cov-report=xml --ignore migrate.py
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
       with:
