--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,6 @@
 # Database
 /database.db
 /database.db.bak
-/database_test.db
-database_test.db-journal
 
 # Python Cache
 /__pycache__/
@@ -16,6 +14,7 @@ database_test.db-journal
 # Private config
 /settings.py
 /secret_key.txt
+/static/favicon.png
 
 # Logs
 /logs/
@@ -24,5 +23,7 @@ database_test.db-journal
 .coverage
 coverage.xml
 
-# testing artifacts
+# Testing artifacts
+/database_test.db
+/database_test.db-journal
 test_upload.txt
