--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -39,6 +39,7 @@ jobs:
     - name: Test and generate coverage report with pytest
       run: |
         git rm migrate.py
+        mkdir logs dl metadata metadata/contests metadata/problems metadata/announcements
         python -m pytest -v --cov=./ --cov-report=xml --count 2
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
