--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,6 +25,7 @@ jobs:
         python-version: 3.8
     - name: Install dependencies
       run: |
+        cd src
         python -m pip install --upgrade pip
         pip install flake8 pytest pytest-cov pytest-repeat
         pip install -r requirements.txt
