--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -35,7 +35,7 @@ jobs:
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. CTFOJ uses 90 characters per line as the limit for Python code.
-        flake8 . --count --exit-zero --ignore=F405 --max-complexity=10 --max-line-length=90 --statistics
+        flake8 . --count --exit-zero --ignore=F405,W503 --max-complexity=10 --max-line-length=90 --statistics
     - name: Test and generate coverage report with pytest
       run: |
         git rm src/migrate.py
