--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,8 +1,9 @@
 Flask-Mail==0.9.1
 flask-session2==1.3.1
 Flask-WTF==1.1.1
-Flask==2.2.2
+Flask==2.2.3
 Werkzeug==2.2.3
 cs50==9.2.5
 pyjwt==2.6.0
 requests==2.28.2
+sqlalchemy<2.0
