--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -2,8 +2,7 @@ Flask-Mail==0.9.1
 flask-session2==1.3.1
 Flask-WTF==1.2.1
 Flask==2.3.3
-Werkzeug==3.0.0
+Werkzeug==3.0.*
 cs50==9.2.7
-pyjwt==2.8.0
-requests==2.31.0
-sqlalchemy<3.0
+pyjwt>=2.8.0
+requests>=2.31.0
