--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,7 +27,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest pytest-cov pytest-repeat
-        cd src && pip install -r requirements.txt
+        cd src && pip install --use-deprecated=legacy-resolver -r requirements.txt
     - name: Flake8 Annotator
       uses: rbialon/flake8-annotations@v1
     - name: Lint with flake8
