--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -41,8 +41,9 @@ jobs:
         git rm src/migrate.py
         cd src && python -m pytest -v --cov=./ --cov-report=xml --count 2
     - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v1
+      uses: codecov/codecov-action@v3
       with:
-        file: src/coverage.xml
+        token: ${{ secrets.CODECOV_TOKEN }}
+        files: src/coverage.xml
         flags: unittests
-        env_vars: OS, PYTHON
+        env_vars: OS,PYTHON
