--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -3,6 +3,7 @@ flask-session2==1.3.1
 Flask-WTF==1.2.1
 Flask==2.3.3
 Werkzeug==3.0.*
-cs50==9.3.0
+cs50==9.3.3
 pyjwt>=2.8.0
 requests>=2.31.0
+SQLAlchemy==2
