--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,7 +1,7 @@
 Flask-Mail==0.9.1
-flask-session2==1.3.1
+flask-session==0.6.0
 Flask-WTF==1.2.1
-Flask==2.3.3
+Flask==3.0.*
 Werkzeug==3.0.*
 cs50==9.3.4
 pyjwt>=2.8.0
